@@ -12,9 +12,17 @@
 
 <section id="gtk-hi"><title>High-level functions</title>
 <variablelist>
- <varlistentry><term><code>(run-glade-file &filename-r; widget)</code></term>
-  <listitem><simpara>Run the UI described in the &glade;-generated file
-    &filename-r;.</simpara></listitem></varlistentry>
+  <varlistentry><term><code>(glade-load &filename-r;)</code></term>
+  <listitem><simpara>Load and connect the UI described in the
+    &glade;-generated file &filename-r;.</simpara></listitem></varlistentry>
+ <varlistentry><term><code>(run-glade-file &filename-r; &name-r;)</code></term>
+  <listitem><simpara>Run the widget &name-r; described in the
+    &glade;-generated file &filename-r;.</simpara></listitem></varlistentry>
+ <varlistentry><term><code>(gui &filename-r;)</code></term>
+  <listitem><simpara>Run the &clisp; demo GUI described in the
+    &glade;-generated file &filename-r;, normally a variation
+    of <filename role="clisp-cvs">modules/gtk2/ui.glade</filename>.
+ </simpara></listitem></varlistentry>
 </variablelist>
 </section>
 
